[tool.poetry]
name = "videomaker-helper"
version = "0.2.2"
description = "Simples tools to help video makers"
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [{include = "vmh"}]
classifiers = [
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
typer = "^0.9.0"
loguru = "^0.7.0"
tinydb = "^4.8.0"
rich = "^13.5.2"
pedalboard = "^0.9.16"
parsel = "^1.8.1"
moviepy = "^2.1.2"
appdirs = "^1.4.4"
matplotlib = "^3.7.2"
librosa = "^0.10.1"
inquirerpy = "^0.3.4"
mkdocstrings = "^0.23.0"
audioop-lts = {version = ">=0.2.1", markers = "python_version >= \"3.13\""}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
mypy = "^1.14.1"
typos = "^1.29.4"
towncrier = "^24.8.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.7"
mkdocs-video = "^1.5.0"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.6.0"

[tool.poetry.scripts]
vmh = "vmh.cli:app"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = 'ignore'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ['I', 'N', 'F', 'E', 'W', 'D', 'PL']
ignore = ['D100', 'D101', 'D103', 'D104', 'D203', 'D213', 'PLR0913']

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = 'ruff format'
lint = 'ruff check'
typos = 'typos vmh tests'
types = 'mypy vmh'
pre_test = 'task lint'
test = 'pytest --cov=vmh/ -vv -x'
stest = 'pytest --cov=vmh/ -vv'
post_test = 'coverage html'
doc = 'mkdocs serve'

[tool.mypy]
ignore_missing_imports = true

[tool.towncrier]
directory = "changes"
package = "vmh"
filename = "NEWS.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
