[project]
name = "videomaker-helper"
version = "0.2.2"
description = "Simples tools to help video makers"
authors = [{ name = "dunossauro", email = "mendesxeduardo@gmal.com" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Environment :: Console",
]

requires-python = ">=3.11,<4.0"
dependencies = [
	"pydub (>=0.25.1,<0.26.0)",
	"typer (>=0.9.0,<0.10.0)",
	"loguru (>=0.7.3,<0.8.0)",
	"tinydb (>=4.8.0,<5.0.0)",
	"rich (>=13.5.2,<14.0.0)",
	"pedalboard (>=0.9.16,<0.10.0)",
	"parsel (>=1.8.1,<2.0.0)",
	"moviepy (>=2.1.2,<3.0.0)",
	"appdirs (>=1.4.4,<2.0.0)",
	"matplotlib (>=3.10.0,<4.0.0)",
	"librosa (>=0.10.1,<0.11.0)",
	"inquirerpy (>=0.3.4,<0.4.0)",
	"audioop-lts (>=0.2.1) ; python_version >= \"3.13\"",
	"numba (>=0.60.0,<0.61.0)"  # librosa requires
]

[project.scripts]
vmh = "vmh.cli:app"

[tool.poetry]
packages = [{include = "vmh"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
mypy = "^1.14.1"
typos = "^1.29.4"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.7"
mkdocs-video = "^1.5.0"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.6.0"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = 'ignore'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ['I', 'N', 'F', 'E', 'W', 'D', 'PL']
ignore = ['D100', 'D101', 'D103', 'D104', 'D203', 'D213', 'PLR0913']

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = 'ruff format'
lint = 'ruff check'
typos = 'typos vmh tests'
types = 'mypy vmh'
pre_test = 'task lint'
test = 'pytest --cov=vmh/ -vv -x'
stest = 'pytest --cov=vmh/ -vv'
post_test = 'coverage html'
doc = 'mkdocs serve'

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
